# drg-sync

./: Cargo.toml
src/: client.rs  main.rs  room.rs  room_mng.rs
src/client/: json.rs
src/room/: timer.rs
web/: package.json  vite.config.ts  windi.config.ts
web/src/: app.pcss  dark.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/[id]/: +page.svelte  Chat.svelte  Members.svelte  SideElement.svelte
web_old/: package.json  vite.config.ts
web_old/src/: App.svelte  Queue.svelte  dark.ts  main.ts  vite-env.d.ts
