[package]
name = "drg-vid"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "sync", "time"] }

axum = { version = "0.6.2", features = ["ws"] }
tower-http = { version = "0.3.5", features = ["trace"] }

dotenv = "0.15.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

eyre = "0.6.8"
color-eyre = "0.6.2"

serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.91"

uuid = { version = "1.2.2", features = ["v4"] }

bitflags = "2.0.0-rc.1"
